<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/twPOC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/welcome" />

    <Button
        android:id="@+id/startClientServerCommunication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="startClientServerCommunicationActivity"
        android:text="@string/startClientServerCommunication" />

    <Button
        android:id="@+id/startDataStorage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="startDataStorageActivity"
        android:text="@string/startDataStorage" />

    <Button
        android:id="@+id/startActivityCommunication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="startActivityCommunicationActivity"
        android:text="@string/ActivityCommunication" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Insulin calculator"
        android:id="@+id/startInsulin"
        android:layout_gravity="center_horizontal"
        android:onClick="startActivityInsulinCalculatorActivity"/>
</LinearLayout>